p1 - challenge/solar-package/main/default/objects/Order__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <label>Shipping Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>