p1 - challenge/solar-package/main/default/objects/Order__c/validationRules/Due_Date_in_the_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_in_the_future</fullName>
    <active>true</active>
    <description>Due Date must be in the future</description>
    <errorConditionFormula>AND(ISCHANGED( Next_Payment_Due_Date__c ), 
NOT(ISBLANK(Next_Payment_Due_Date__c )),
Next_Payment_Due_Date__c &lt;  TODAY())</errorConditionFormula>
    <errorDisplayField>Next_Payment_Due_Date__c</errorDisplayField>
    <errorMessage>Due Date Next Payment must be in the future</errorMessage>
</ValidationRule>